# Better-Spotify-Wrapped

./: .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DDL.sql  GEMINI.md  README.md  SEED.sql  TASK.md  hello.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
dashboard/: application.py  conn.py
dashboard/assets/: heatmap.js  highcharts_renderer.js  styles.css  theme_clientside.js
dashboard/callbacks/: callbacks.py  main.py
dashboard/components/: filters.py  graphs.py  stats.py
dashboard/layouts/: layouts.py  main.py
llm/: all_subgenres.txt  get_subgenre_taxonomy.py
scripts/: bootstrap_worktree.sh
src/: __init__.py  cli.py  db_ingest.py  io.py  link_artist_genres.py  load_genre_taxonomy.py  metrics.py  preprocessing.py  wrapped.py
src/api/: api.py  utils.py
src/metrics/: metrics.py  social.py  trends.py  utils.py
tests/: __init__.py  conftest.py  test_application.py  test_metrics.py  test_social.py
