[project]
name = "better-spotify-wrapped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "spotipy>=2.24.0",
    "tqdm>=4.67.1",
    "pyinstaller>=6.11.1",
    "webdriver-manager>=4.0.2",
    "duckdb>=1.3.2",
]

[dependency-groups]
dev = [
    "dash[testing]>=2.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.3.5",
    "ruff>=0.12.10",
]
